[package]
name = "repulse"
version = "0.1.0"
authors = ["panicbit <panicbit.dev@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "0.2.22", features = ["full"] }
anyhow = "1.0.32"
byteorder = "1.3.4"
num_enum = "0.5.0"
dirs = "3.0.1"
futures = "0.3.5"
parking_lot = "0.11.0"
tokio-util = { version = "0.3.1", features = ["codec"] }
bytes = "0.5.6"

[dev-dependencies]
audrey = "0.2.0"
